Build configuration fixes and updates
- Updated Gradle wrapper to 8.7 for Java 21 compatibility
- Added Flutter plugin loader to settings.gradle
- Updated compileSdk and targetSdk to 36
- Fixed CardTheme to CardThemeData in main.dart
- Added Android app icons and resources
- Updated .gitignore to exclude build artifacts
- Configured Android SDK paths

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/build/
+/android/.gradle/
+/android/local.properties
+/android/gradle/wrapper/gradle-wrapper.jar
 
 # Plan file
 *.plan.md
