feat: Remove OCR functionality for F-Droid compliance
- Remove all OCR-related code, dependencies, and permissions
- Optimize manual input features with improved UI/UX
- Conduct comprehensive security audit and implement fixes
- Ensure F-Droid compliance by removing proprietary components
- Prepare submission materials (changelog, metadata, licenses)
- Add security utilities for input validation and sanitization
- Configure network security to enforce HTTPS
- Update build configuration for reproducibility
- Generate signed APK for submission

The app is now fully focused on manual fuel tracking with privacy-first design.

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,12 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx1536M --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
 android.useAndroidX=true
 android.enableJetifier=true
 
+# Build Reproducibility
+org.gradle.parallel=true
+org.gradle.caching=true
+# Disabled due to Kotlin/Gradle compatibility issues
+org.gradle.configuration-cache=false
+
+# Suppress SDK warning
+android.suppressUnsupportedCompileSdk=36
