--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
         android:label="Fillup"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        android:networkSecurityConfig="@xml/network_security_config"
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,4 +28,3 @@
             android:value="2" />
     </application>
 </manifest>
-
