--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "media/icon_512.png"
   
   # assets:
   #   - assets/images/
