--- a/com.fillup.fillup.yml
+++ b/com.fillup.fillup.yml
@@ -1,5 +1,5 @@
 Categories:
-  - Finance
+  - Money
 
 License: GPL-3.0-or-later
 
@@ -15,41 +15,38 @@ Name: FillUp
 Summary: Fuel expense and mileage tracking app
 Description: |
   FillUp is a simple, privacy-respecting fuel expense tracking application.
-  It helps users record fuel purchases, track mileage, and analyze fuel costs
-  over time without ads, tracking, or proprietary dependencies.
+  It allows users to record fuel purchases, track mileage, and analyze
+  fuel costs over time without ads, trackers, or proprietary services.
+
+RepoType: git
+Repo: https://github.com/itsmaxyd/fuelup.git
 
 AutoUpdateMode: Version
 UpdateCheckMode: Tags
-UpdateCheckData: pubspec.yaml|version:\s(.+)\+(\d+)|.|version:\s(.+)\+
 
-CurrentVersion: 1.0.0
-CurrentVersionCode: 11
-
-RepoType: git
-Repo: https://github.com/itsmaxyd/fuelup
+CurrentVersion: 1.0.1
+CurrentVersionCode: 2
 
 Builds:
-  - versionName: 1.0.0
-    versionCode: 11
-    commit: v1.0.0
+  - versionName: 1.0.1
+    versionCode: 2
+    commit: v1.0.1
 
+    submodules: true
     subdir: .
+
     sudo:
       - apt-get update
-      - apt-get install -y curl unzip xz-utils git openjdk-17-jdk
+      - apt-get install -y unzip xz-utils git openjdk-17-jdk libglu1-mesa
 
-    output: build/app/outputs/flutter-apk/app-release.apk
+    prebuild:
+      - export FLUTTER_HOME=$PWD/flutter
+      - export PATH="$FLUTTER_HOME/bin:$PATH"
+      - flutter config --no-analytics
+      - flutter doctor
+      - flutter pub get
 
     build:
-      - export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-      - curl -fsSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.19.6-stable.tar.xz | tar xJ
-      - export PATH="$PWD/flutter/bin:$PATH"
-      - flutter config --no-analytics
-      - flutter pub get
-      - flutter build apk --release
+      - flutter build apk --release --no-tree-shake-icons
 
-    ndk: r26b
-
-    gradle:
-      - yes
-
+    output: build/app/outputs/flutter-apk/app-release.apk
