--- a/com.fillup.fillup.yml
+++ b/com.fillup.fillup.yml
@@ -1,7 +1,10 @@
 Categories:
   - Money
+  - Finance Manager
 
 License: GPL-3.0-or-later
+
+AutoName: FillUp
 
 AuthorName: Max Demon
 AuthorEmail: maxdemon@outlook.com
