--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     
     <application
         android:label="Fillup"
-        android:name="io.flutter.app.FlutterApplication"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon"
         android:networkSecurityConfig="@xml/network_security_config"
         <activity
             android:name=".MainActivity"
